fix overlapped outline

--- a/webservice/static/style.css
+++ b/webservice/static/style.css
@@ -172,8 +172,15 @@ form.auth-form>label {
     color: var(--text-on-primary);
 }
 
+#search {
+    position: relative;
+    z-index: 1;
+}
+
 .search-button {
     padding: 0.2rem;
+    position: relative;
+    z-index: 0;
 }
 
 .icon-button:hover {
